--- a/schema/derivative.yml
+++ b/schema/derivative.yml
@@ -150,9 +150,22 @@ components:
             - dcType
             - dcFormat
           properties:
+            createdBy:
+              type: string      
+              readOnly: true
+              description: authenticated user who create the derivative
+            createdOn:              
+              type: string
+              format: date-time                            
+              readOnly: true
+              description: date and time when the material sample was created in ISO format
+              example: 1985-04-12T23:20:50.52Z
             bucket:
               type: string
               description: Namespace of the file described by the metadata
+            fileExtension:
+              type: string
+              description: Identifier specified as a suffix to the name of a file
             fileIdentifier:
               type: string
               description: Identifier (as UUID) of the file described by the metadata
