--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -310,7 +310,7 @@ components:
               description: Text explaining why an object cannot be released publicly
             managedAttributeValues:
               type: object
-              description: The manage attribute, with key and value pair
+              description: The manage attribute, with key and value pair. The managed attribute's key is expected to be set as a managedAttributeValues' entry key.
               additionalProperties:
                 type: string
             acTags:
