25527_add_validation_to_object-store_managed_attribute_keys (#87)
* update description

--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -310,7 +310,7 @@ components:
               description: Text explaining why an object cannot be released publicly
             managedAttributeValues:
               type: object
-              description: The manage attribute, with key and value pair
+              description: The manage attribute, with key and value pair. A managedAttributeValues' entry key is expected to be set as a managed attribute's key.
               additionalProperties:
                 type: string
             acTags:
