--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -216,14 +216,17 @@ components:
           description: Schema representing the metadata associated with objects
           type: object
           required:
-            - fileIdentifier
-            - bucket
-            - dcFormat
-            - dcType
-            - acDigitizationDate
-            - xmpRightsUsageTerms
-            - xmpRightsWebStatement
-            - dcRights
+            oneOf:
+              - fileIdentifier
+              - resourceExternalURI
+            allOf:
+              - bucket
+              - dcFormat
+              - dcType
+              - acDigitizationDate
+              - xmpRightsUsageTerms
+              - xmpRightsWebStatement
+              - dcRights
           properties:
             createdBy:
               type: string      
@@ -257,7 +260,7 @@ components:
               description: Subtype of object stored. Specialization of dcType. https://terms.tdwg.org/wiki/Audubon_Core_Term_List#ac:subtype
             fileIdentifier:
               type: string
-              description: Identifier (as UUID) of the file described by the metadata
+              description: Internal identifier (as UUID) of the file described by the metadata. If a file identifier is provided, a resourceExternalURI cannot be set.
             bucket:
               type: string
               description: Namespace of the file described by the metadata
@@ -332,7 +335,12 @@ components:
             orientation:
               type: integer
               nullable: true
-              description: EXIF Orientation value https://www.impulseadventure.com/photo/exif-orientation.html 
+              description: EXIF Orientation value https://www.impulseadventure.com/photo/exif-orientation.html
+            resourceExternalURI:
+              type: string
+              description: Metadata can also reference a external resource instead of a internal file identifier. If this is provided, a file identifier cannot be set.
+              format: uri
+              nullable: true
         relationships:
           nullable: true
           properties:
