--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -256,7 +256,7 @@ components:
               description: Subtype of object stored. Specialization of dcType. https://terms.tdwg.org/wiki/Audubon_Core_Term_List#ac:subtype
             fileIdentifier:
               type: string
-              description: Internal identifier (as UUID) of the file described by the metadata. If a file identifier is provided, a resourceExternalURI cannot be set.
+              description: Internal identifier (as UUID) of the file described by the metadata. If a file identifier is provided, a resourceExternalURL cannot be set.
             bucket:
               type: string
               description: Namespace of the file described by the metadata
@@ -332,7 +332,7 @@ components:
               type: integer
               nullable: true
               description: EXIF Orientation value https://www.impulseadventure.com/photo/exif-orientation.html
-            resourceExternalURI:
+            resourceExternalURL:
               type: string
               description: Metadata can also reference a external resource instead of a internal file identifier. If this is provided, a file identifier cannot be set.
               format: uri
