--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -188,6 +188,12 @@ components:
       required:
         - external
       properties:
+        totalResourceCount:
+          type: integer
+          description: Total resources retrieved from the query without pagination applied.
+        moduleVersion:
+          type: string
+          description: The current version of the ObjectStore API.
         external:
           type: array
           items:
