Support #27158 - Update to dina base 0.86 (#92)
- Added the missing metadata fields.
- Fixed the managed attributes field.
- Added missing resourceExternalURL field.
- Fixed the derivatives relationship.
- Removed the meta section, should result in no validation issues.

--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -164,10 +164,6 @@ components:
               description: Identifier of the object as UUID
           allOf:
             - $ref: "#/components/schemas/CommonMetadata"
-        meta:
-          type: object
-          allOf:
-            - $ref: "#/components/schemas/CommonMeta"
 
     NewMetadata:
       type: object
@@ -178,30 +174,6 @@ components:
           type: object
           allOf:
             - $ref: "#/components/schemas/CommonMetadata"
-        meta:
-          type: object
-          allOf:
-            - $ref: "#/components/schemas/CommonMeta"
-
-    CommonMeta:
-      type: object
-      required:
-        - external
-      properties:
-        external:
-          type: array
-          items:
-            type: object
-            required:
-              - href
-              - type
-            properties:
-              type:
-                type: string
-                example: person
-              href:
-                type: string
-                example: dinaapi.org/agent/person
 
     CommonMetadata:
       type: object
@@ -311,7 +283,7 @@ components:
             publiclyReleasable:
               type: boolean
               description:
-                Can the object representented by the metadata be released
+                Can the object represented by the metadata be released
                 publicly? An object that is released publicly retains its license and
                 copyright
             notPubliclyReleasableReason:
@@ -319,7 +291,7 @@ components:
               description: Text explaining why an object cannot be released publicly
             managedAttributes:
               type: object
-              description: The manage attribute, with key and value pair. A managedAttributeValues' entry key is expected to be set as a managed attribute's key.
+              description: The managed attribute, with key and value pair. A managedAttributes entry key is expected to be set as a managed attribute's key.
               additionalProperties:
                 type: string
             acTags:
@@ -348,20 +320,17 @@ components:
                   type: array
                   items:
                     type: object
+                    required:
+                      - type
+                      - id
                     properties:
-                      data:
-                        type: object
-                        required:
-                          - type
-                          - id
-                        properties:
-                          type: 
-                            enum: [derivative]
-                          id:
-                            type: string
-                            format: uuid
-                            description: metadata's derivatives id
-                            example: 1096500a-25dc-4a63-ba14-ea6ee5057fb3
+                      type: 
+                        enum: [derivative]
+                      id:
+                        type: string
+                        format: uuid
+                        description: metadata's derivatives id
+                        example: 1096500a-25dc-4a63-ba14-ea6ee5057fb3
             dcCreator:
               type: object
               properties:
